Change to using Zynq ACPU instead of Microblaze so we can use the SD card

--- a/firmware/.gitignore
+++ b/firmware/.gitignore
@@ -1,7 +1,7 @@
 .metadata/
-esdi_emulator/_ide/
-esdi_emulator_platform/
-esdi_emulator_system/_ide/
 RemoteSystemsTempFiles/
 .analytics
 IDE.log
+esdi_emulator/
+esdi_emulator_app_system/_ide/
+esdi_emulator_app/_ide/
