--- a/firmware/esdi_emulator/.project
+++ b/firmware/esdi_emulator/.project
@@ -3,25 +3,16 @@
 	<name>esdi_emulator</name>
 	<comment>Created by Vitis v2023.1</comment>
 	<projects>
-		<project>esdi_emulator_platform</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
-			<name>org.eclipse.cdt.managedbuilder.core.genmakebuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>org.eclipse.cdt.managedbuilder.core.ScannerConfigBuilder</name>
-			<triggers>full,incremental,</triggers>
+			<name>com.xilinx.sdx.scw.PlatformProjectBuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
 	</buildSpec>
 	<natures>
-		<nature>com.xilinx.sdx.sdk.core.SdkProjectNature</nature>
+		<nature>com.xilinx.sdx.scw.platformProject</nature>
 		<nature>org.eclipse.cdt.core.cnature</nature>
-		<nature>org.eclipse.cdt.managedbuilder.core.managedBuildNature</nature>
-		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 	</natures>
 </projectDescription>
